Menu food added

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -5,6 +5,7 @@
     "events": "Events",
     "experiments": "Experiments",
     "about": "About",
+    "menu": "Menu",
     "contact": "Contact",
     "cart": "Cart",
     "admin": "Admin",
