--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -5,6 +5,7 @@
     "events": "Eventos",
     "experiments": "Experimentos",
     "about": "Acerca de",
+    "menu": "Menú",
     "contact": "Contacto",
     "cart": "Carrito",
     "admin": "Admin",
